micromobility_car_object_avoidance/local/Projects/ros2_ws/log/build_2022-05-19_09-32-25/object_avoidance/stdout_stderr.log
running egg_info
writing ../../build/object_avoidance/object_avoidance.egg-info/PKG-INFO
writing dependency_links to ../../build/object_avoidance/object_avoidance.egg-info/dependency_links.txt
writing entry points to ../../build/object_avoidance/object_avoidance.egg-info/entry_points.txt
writing requirements to ../../build/object_avoidance/object_avoidance.egg-info/requires.txt
writing top-level names to ../../build/object_avoidance/object_avoidance.egg-info/top_level.txt
reading manifest file '../../build/object_avoidance/object_avoidance.egg-info/SOURCES.txt'
writing manifest file '../../build/object_avoidance/object_avoidance.egg-info/SOURCES.txt'
running build
running build_py
copying object_avoidance/depth_detection.py -> /home/user/Projects/ros2_ws/build/object_avoidance/build/lib/object_avoidance
running install
/usr/local/lib/python3.8/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/user/Projects/ros2_ws/build/object_avoidance/build/lib/object_avoidance/depth_detection.py -> /home/user/Projects/ros2_ws/install/object_avoidance/lib/python3.8/site-packages/object_avoidance
byte-compiling /home/user/Projects/ros2_ws/install/object_avoidance/lib/python3.8/site-packages/object_avoidance/depth_detection.py to depth_detection.cpython-38.pyc
running install_data
  File "/home/user/Projects/ros2_ws/install/object_avoidance/lib/python3.8/site-packages/object_avoidance/depth_detection.py", line 21
    global self.point
               ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/user/Projects/ros2_ws/install/object_avoidance/lib/python3.8/site-packages/object_avoidance-0.0.1-py3.8.egg-info' (and everything under it)
Copying ../../build/object_avoidance/object_avoidance.egg-info to /home/user/Projects/ros2_ws/install/object_avoidance/lib/python3.8/site-packages/object_avoidance-0.0.1-py3.8.egg-info
running install_scripts
Installing depth_detection script to /home/user/Projects/ros2_ws/install/object_avoidance/lib/object_avoidance
Installing object_detection script to /home/user/Projects/ros2_ws/install/object_avoidance/lib/object_avoidance
Installing obstacle_avoidance script to /home/user/Projects/ros2_ws/install/object_avoidance/lib/object_avoidance
Installing obstacle_brake script to /home/user/Projects/ros2_ws/install/object_avoidance/lib/object_avoidance
writing list of installed files to '/home/user/Projects/ros2_ws/build/object_avoidance/install.log'
